- "foreignkey" argument to relation() can also be a list.  fixed
auto-foreignkey detection [ticket:151]
- fixed bug where tables with schema names werent getting indexed in
the MetaData object properly
- fixed bug where Column with redefined "key" property wasnt getting
type conversion happening in the ResultProxy [ticket:207]
- fixed 'port' attribute of URL to be an integer if present

0.2.2
- big improvements to polymorphic inheritance behavior, enabling it
to work with adjacency list table structures [ticket:190]
- major fixes and refactorings to inheritance relationships overall,
more unit tests
- fixed "echo_pool" flag on create_engine()
- fix to docs, removed incorrect info that close() is unsafe to use
with threadlocal strategy (its totally safe !)
- create_engine() can take URLs as string or unicode [ticket:188]
- firebird support partially completed; 
thanks to James Ralston and Brad Clements for their efforts.
- Oracle url translation was broken, fixed, will feed host/port/sid
into cx_oracle makedsn() if 'database' field is present, else uses 
straight TNS name from the 'host' field
- fix to using unicode criterion for query.get()/query.load()
- count() function on selectables now uses table primary key or 
first column instead of "1" for criterion, also uses label "rowcount"
instead of "count".  
- got rudimental "mapping to multiple tables" functionality cleaned up, 
more correctly documented
- restored global_connect() function, attaches to a DynamicMetaData
instance called "default_metadata".  leaving MetaData arg to Table
out will use the default metadata.
- fixes to session cascade behavior, entity_name propigation
- reorganized unittests into subdirectories
- more fixes to threadlocal connection nesting patterns

0.2.1
- "pool" argument to create_engine() properly propigates
- fixes to URL, raises exception if not parsed, does not pass blank
fields along to the DB connect string (a string such as 
user:host@/db was breaking on postgres)