@@ -19,6 +19,8 @@ the MetaData object properly
 - fixed bug where Column with redefined "key" property wasnt getting
 type conversion happening in the ResultProxy [ticket:207]
 - fixed 'port' attribute of URL to be an integer if present
+- fixed old bug where if a many-to-many table mapped as "secondary"
+had extra columns, delete operations didnt work
 
 0.2.2
 - big improvements to polymorphic inheritance behavior, enabling it
